# gateway

./: .babelrc  .dockerignore  .eslintignore  .eslintrc-typescript.js  .eslintrc.js  .gitignore  .jshintrc  .prettierrc.json  .stylelintrc.json  .travis.yml  Cargo.toml  Dockerfile  README.docker.md  README.md  README.snap.md  adapter-manager.js  adapter.js  adapters.js  app.js  authentication.js  babel.config.js  constants.js  cross-compile.sh  db.js  deferred.js  device.js  discovered-addon.js  docker-compose.yml  ec-crypto.js  global.d.ts  install.sh  installed-addon.js  jest.config.js  jshint-all.sh  jwt-middleware.js  l10n.toml  package-lock.json  package.json  pagekite-win32.py  pagekite.py  (+15 more)
.github/: CODEOWNERS
__mocks__/: node-persist.js
adapters/: adapter.js  deferred.js  device.js  foo.js  property.js
config/: adapter-config-example.js  adapter-manager-config-example.js  default.js  gpio-config-example.js  index.js  test.js
config-wifi/: mozilla-gateway-wifi-setup.service
controllers/: actions_controller.js  adapters_controller.js  debug_controller.js  log_out_controller.js  login_controller.js  new_things_controller.js  root_controller.js  things_controller.js  tunnel_controller.js  users_controller.js
deb/: .gitignore  build-deb-manual.sh  build.sh  generate-tarball.sh
doc/: how-to-ota.md
docker/: init.sh
gateway/: Cargo.toml
gateway_addon/: Cargo.toml
image/: .gitignore  add-gateway.sh  build-gateway.sh  build.sh  config  image-to-aws.sh  make-prep.sh  prepare-base-root.sh  prepare-base.sh  rebuild-node-modules.sh  shrink.sh  webthings-gateway-model-amd64.json  webthings-gateway-model-amd64.model  webthings-gateway-model-arm64.json  webthings-gateway-model-arm64.model
(+1122 files in other folders)
