[package]
name = "gateway"
version = "2.0.0-alpha.1"
authors = ["WebThingsIO"]
edition = "2018"
repository = "https://github.com/WebThingsIO/gateway"
license = "MPL-2.0"

[dependencies]
rocket = "0.4.10"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
rusqlite = "0.25.3"
lazy_static = "1.4.0"
dirs = "1.0.5"
semver = "1.0.3"
futures = "0.3"
tungstenite = "0.13.0"
regex = "1.5.4"

[dependencies.rocket_contrib]
version = "0.4.10"
default-features = false
features = ["json"]

[dev-dependencies]
rusty-fork = "0.3.0"
serial_test = "0.4.0"
