[package]
name = "gateway"
version = "2.0.0-alpha.1"
authors = ["WebThingsIO"]
edition = "2018"
repository = "https://github.com/WebThingsIO/gateway"
license = "MPL-2.0"

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
rusqlite = "0.25.3"
lazy_static = "1.4.0"
dirs = "1.0.5"
semver = "1.0.3"
futures = "0.3"
regex = "1.5.4"
webthings-gateway-ipc-types = "1.0.0-alpha.2"
actix = "0.12"
actix-web = "4.0.0-beta.8"
actix-web-actors = "4.0.0-beta.6"
tokio = "1.8.1"

[dependencies.rocket]
version = "0.5.0-rc.1"
features = ["json"]

[dev-dependencies]
rusty-fork = "0.3.0"
serial_test = "0.4.0"
